<resources>
    <string name="app_name">Health Expert</string>
    <string name="unknown_error">Some unknown error occurred.</string>
    <string name="network_error">Please check your internet connection.</string>
    <string name="system_error">Something went wrong. Please try again later.</string>
    <string name="sign_up">Sign Up</string>
    <string name="font_name_montserrat">montserrat</string>
    <string name="font_name_montserrat_bold">montserrat_bold</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here</string>
    <string name="password">Password</string>
    <string name="email_id">Email Id</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="dr_speciality">Dr Speciality</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="phone_no">Phone No</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="patient_name">Patient Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="occupation">Occupation</string>
    <string name="symptoms">Symptoms</string>
    <string name="history">History</string>
    <string name="investigations">Investigations</string>
    <string name="mother_name">Mothers\'s Name</string>
    <string name="mother_s_symptom">Mother\'s Symptom</string>
    <string name="father_s_name">Father\'s name</string>
    <string name="father_s_symptom">Father\'s Symptom</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="upload_profile_icon">Upload Profile Icon</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="submit">Submit</string>
    <string name="add_patient">Add Patient</string>
    <string name="search_symptom">Search Symptom</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="registration_no">Registration No</string>
    <string name="experience">Experience (in years)</string>
    <string name="doctor">Doctor</string>
    <string name="register_as_patient">Register as patient</string>
    <string name="register_as_doctor">Register as doctor</string>
    <string name="patient">Patient</string>
    <string name="blood_group">Blood Group</string>
    <string name="call">CALL</string>
    <string name="doctors">Doctors</string>
    <string name="specialities">Specialities</string>
    <string name="select_speciality">Select speciality</string>
    <string name="experience_1">Experience</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="chat">Chat</string>
    <string name="type_message">Type Message</string>
    <string name="select_symptoms">Select Symptoms</string>
    <string name="ratings">Ratings</string>
    <string name="messaging">Messaging</string>
    <string name="include_paternal_details">Include Paternal Details</string>
    <string name="would_you_recommend_the_doctor_to_your_family_and_friends">Would you recommend the doctor to your family and friends?</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="bookmark">Bookmark</string>
    <string name="summary">Summary</string>
    <string name="prescription">Prescription</string>
    <string name="patient_summary">Patient Summary</string>
    <string name="predict_disease">Predict Disease</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="prescription_title">Prescription Title</string>
    <string-array name="bloodgroup">
        <item>Select Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="speciality">
        <item>Select Speciality</item>
        <item>Allergist</item>
        <item>Anesthesiologist</item>
        <item>Gastroenterologist</item>
        <item>Hematologist/Oncologist</item>
        <item>Internal Medicine Physician</item>
        <item>Nephrologist</item>
        <item>Neurologist</item>
        <item>Obstetrician</item>
        <item>Gynecologist</item>
        <item>Nurse-Midwifery</item>
        <item>Occupational Medicine Physician</item>
        <item>Ophthalmologist</item>
        <item>Oral and Maxillofacial Surgeon</item>
        <item>Orthopaedic Surgeon</item>
        <item>Otolaryngologist</item>
        <item>Pathologist</item>
        <item>Podiatrist</item>
        <item>Psychiatrist</item>
        <item>Pulmonary Medicine Physician</item>
        <item>Radiation Onconlogist</item>
        <item>Diagnostic Radiologist</item>
        <item>Rheumatologist</item>
        <item>Urologist</item>
    </string-array>
</resources>