<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etName"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/patient_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etDob"
                    android:focusable="false"
                    android:clickable="true"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseTextView
                    style="@style/PrimaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender" />

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.healthexpert.ui.widgets.BaseRadioButton
                        android:id="@+id/rbMale"
                        style="@style/BaseRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/male" />

                    <com.healthexpert.ui.widgets.BaseRadioButton
                        android:id="@+id/rbFemale"
                        style="@style/BaseRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/female" />
                </RadioGroup>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.healthexpert.ui.widgets.BaseEditText
                        android:id="@+id/etHeight"
                        style="@style/BaseEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/height"
                        android:inputType="numberSigned|numberDecimal"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.healthexpert.ui.widgets.BaseEditText
                        android:id="@+id/etWeight"
                        style="@style/BaseEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/weight"
                        android:inputType="numberSigned|numberDecimal"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etEmailId"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etPassword"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etCPassword"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etPhoneno"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_no"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etOccupation"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/occupation" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etSymptom"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/symptoms" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseTextView
                    android:text="@string/blood_group"
                    style="@style/SecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sBloodGroup"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="?attr/selectableItemBackground"
                    android:entries="@array/bloodgroup" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etHistory"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/history" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etInvestigations"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/investigations" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/etCity"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etPincode"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pincode" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etMname"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mother_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etMS"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mother_s_symptom" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etFname"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/father_s_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseEditText
                    android:id="@+id/etFS"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/father_s_symptom" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.healthexpert.ui.widgets.BaseTextView
                    style="@style/PrimaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_icon" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/plus" />

            <com.healthexpert.ui.widgets.BaseTextView
                style="@style/PrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/upload_profile_icon" />

            <FrameLayout
                android:id="@+id/fImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:layout_marginTop="16dp" />

                <ImageView
                    android:id="@+id/ivCloseButton"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="top|right"
                    android:clickable="true"
                    android:src="@drawable/close_button" />

            </FrameLayout>

            <com.healthexpert.ui.widgets.BaseButton
                android:id="@+id/bSubmit"
                style="@style/BaseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>