<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:src="@mipmap/ic_launcher" />

        <com.healthexpert.ui.widgets.BaseTextView
            style="@style/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.healthexpert.ui.widgets.BaseEditText
                android:id="@+id/etEmailId"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:passwordToggleEnabled="true">

            <com.healthexpert.ui.widgets.BaseEditText
                android:id="@+id/etPassword"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <com.healthexpert.ui.widgets.BaseButton
            android:id="@+id/bLogin"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/login" />

        <com.healthexpert.ui.widgets.BaseButton
            android:id="@+id/bRegisterPatient"
            style="@style/SecondaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/register_as_patient" />

        <com.healthexpert.ui.widgets.BaseButton
            android:id="@+id/bRegisterDoctor"
            style="@style/SecondaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/register_as_doctor" />
    </LinearLayout>

</ScrollView>